apply widevine changes for Dogus

--- a/configurations/widevine.template.ini
+++ b/configurations/widevine.template.ini
@@ -1,5 +1,6 @@
 key = @WIDEVINE_SIGN_KEY@
 iv = @WIDEVINE_SIGN_IV@
-license_server_url = http://@WIDEIVINE_LICENSE_SERVER_HOST@/widevine/cypherpc/cgi-bin/GetEMMs.cgi
+license_server_url = @WIDEIVINE_LICENSE_SERVER_HOST@/getlicense
+reg_server_host = @WIDEIVINE_REG_SERVER_HOST@
 portal = kaltura
 kmc_policy = kmc_system
