Add default status 0 to default delivery profiles

--- a/deployment/base/scripts/init_data/07.DeliveryProfileLiveHds.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileLiveHds.ini
@@ -9,6 +9,7 @@ description="Default HD Network Live Delivery Profile"
 streamerType=hdnetworkmanifest
 isDefault=1
 parentId=0
+status=0
 
 [DefaultHDSLive]
 id=2
@@ -20,3 +21,4 @@ description="Default HDS Live Delivery Profile"
 streamerType=hds
 isDefault=1
 parentId=0
+status=0
