Ingest live profiles templates

--- a/deployment/base/scripts/init_data/04.liveParams.ini
+++ b/deployment/base/scripts/init_data/04.liveParams.ini
@@ -193,3 +193,40 @@ rotate=0
 type=3
 requiredPermissions = FEATURE_LIVE_STREAM
 streamSuffix = 3
+
+
+[Multicast_transcode]
+id=38
+version=0
+partnerId=0
+name="Multicast transcode3"
+systemName="Multicast transcode"
+tags="multicast_silverlight"
+description="Multicast transcode"
+readyBehavior=2
+isDefault=1
+format=mp4
+videoCodec=h264b
+videoBitrate=360
+audioCodec=aac
+audioBitrate=40
+audioChannels=2
+audioSampleRate=44100
+audioResolution=0
+width=640
+height=0
+frameRate=0
+gopSize=0
+twoPass=0
+conversionEngines="2,99,3"
+conversionEnginesExtraParams="-flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -trellis 1 -refs 1 -me_range 16 -keyint_min 20 -sc_threshold 40 -i_qfactor 0.71 -bt 100k -maxrate 360k -bufsize 1200k -rc_eq 'blurCplx^(1-qComp)' -level 30 -async 2  -vsync 1 -threads 4 | -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -trellis 1 -refs 1 -me_range 16 -keyint_min 20 -sc_threshold 40 -i_qfactor 0.71 -bt 100k -maxrate 400k -bufsize 1200k -rc_eq 'blurCplx^(1-qComp)' -level 30 -async 2 -vsync 1 | -x264encopts qcomp=0.6:qpmin=10:qpmax=50:qpstep=4:frameref=1:bframes=0:threads=auto:level_idc=30:global_header:partitions=i4x4+p8x8+b8x8:trellis=1:me_range=16:keyint_min=20:scenecut=40:ipratio=0.71:ratetol=20:vbv-maxrate=400:vbv-bufsize=1200"
+aspectRatioProcessingMode=0
+forceFrameToMultiplication16=1
+isGopInSec=0
+requiredPermissions=FEATURE_PUSH_PUBLISH
+streamSuffix=1
+viewOrder=0
+creationMode=1
+deinterlice=0
+rotate=0
+type=3
