--- a/configurations/cron/api.template
+++ b/configurations/cron/api.template
@@ -1,1 +1,1 @@
-*/15 * * * * kaltura @APP_DIR@/alpha/crond/kaltura/clear_cache.sh 2>&1 >> @LOG_DIR@/cron.log
+*/15 * * * * apache @APP_DIR@/alpha/crond/kaltura/clear_cache.sh 2>&1 >> @LOG_DIR@/cron.log
