--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -86,7 +86,7 @@ kdp3_wrapper_version = v34.0
 html5_version = v1.8.2
 clipapp_version = v1.3
 kmc_secured_login = false
-studio_version = v1.4
+studio_version = v1.5.rc1
 	
 kmc_version = v5.37.22
 new_partner_kmc_version = 4
