Missing feature permissions for partner 99

--- a/deployment/base/scripts/init_data/02.Permission.ini
+++ b/deployment/base/scripts/init_data/02.Permission.ini
@@ -267,3 +267,36 @@ description="Time Based - Annotations"
 partnerId=99
 status=1
 
+
+[99_FEATURE_LIVE_STREAM]
+type=2
+name=FEATURE_LIVE_STREAM
+friendlyName="Live Streaming"
+description="Live Streaming"
+partnerId=99
+status=1
+
+[99_FEATURE_KALTURA_LIVE_STREAM]
+type=2
+name=FEATURE_KALTURA_LIVE_STREAM
+friendlyName="Kaltura Live Streaming"
+description="Kaltura Live Streaming"
+partnerId=99
+status=1
+
+[99_FEATURE_SHOW_HTML_STUDIO]
+type=2
+name=FEATURE_SHOW_HTML_STUDIO
+friendlyName="Kaltura Live Streaming"
+description="Kaltura Live Streaming"
+partnerId=99
+status=1
+
+[99_FEATURE_SHOW_FLASH_STUDIO]
+type=2
+name=FEATURE_SHOW_FLASH_STUDIO
+friendlyName="Kaltura Live Streaming"
+description="Kaltura Live Streaming"
+partnerId=99
+status=1
+
