--- a/configurations/apache/kaltura.conf.template
+++ b/configurations/apache/kaltura.conf.template
@@ -1,4 +1,4 @@
-<VirtualHost @KALTURA_VIRTUAL_HOST_NAME@:@KALTURA_VIRTUAL_HOST_PORT@>
+<VirtualHost *:@KALTURA_VIRTUAL_HOST_PORT@>
 	ErrorLog "@LOG_DIR@/kaltura_apache_errors.log"
 	CustomLog @LOG_DIR@/kaltura_apache_access.log vhost_kalt
 	
