flavorAsset->update should be allowed for partner -5

--- a/deployment/permissions/service.flavorasset.ini
+++ b/deployment/permissions/service.flavorasset.ini
@@ -132,7 +132,7 @@ permissionItem15.param3 =
 permissionItem15.param4 = 
 permissionItem15.param5 = 
 permissionItem15.tags = 
-permissionItem15.permissions = CONTENT_INGEST_UPLOAD, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION
+permissionItem15.permissions = CONTENT_INGEST_UPLOAD, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem16.service = flavorasset
 permissionItem16.action = setassource
