--- a/deployment/permissions/object.KalturaLiveEntry.ini
+++ b/deployment/permissions/object.KalturaLiveEntry.ini
@@ -6,7 +6,7 @@ permissionItem1.partnerId = 0
 permissionItem1.param4 = 
 permissionItem1.param5 = 
 permissionItem1.tags = 
-permissionItem1.permissions = PUSH_PUBLISH_PERMISSION
+permissionItem1.permissions = PUSH_PUBLISH_PERMISSION, -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem2.object = KalturaLiveEntry
 permissionItem2.parameter = pushPublishEnabled
@@ -15,7 +15,7 @@ permissionItem2.partnerId = 0
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = PUSH_PUBLISH_PERMISSION
+permissionItem2.permissions = PUSH_PUBLISH_PERMISSION, -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem3.object = KalturaLiveEntry
 permissionItem3.parameter = pushPublishEnabled
@@ -24,7 +24,7 @@ permissionItem3.partnerId = 0
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = PUSH_PUBLISH_PERMISSION
+permissionItem3.permissions = PUSH_PUBLISH_PERMISSION, -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
 
 permissionItem4.object = KalturaLiveEntry
 permissionItem4.parameter = pushPublishEnabled
@@ -33,4 +33,4 @@ permissionItem4.partnerId = 0
 permissionItem4.param4 = 
 permissionItem4.param5 = 
 permissionItem4.tags = 
-permissionItem4.permissions = PUSH_PUBLISH_PERMISSION
+permissionItem4.permissions = PUSH_PUBLISH_PERMISSION, -5>MEDIA_SERVER_BASE, -5>PARTNER_-5_GROUP_*_PERMISSION
