Fixes for on-prem- configurations

--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -20,6 +20,10 @@ stats_host_https = @WWW_HOST@
 
 kaltura_installation_type = @KALTURA_VERSION_TYPE@
 
+api_cache_warmup_host = @WWW_HOST@
+
+html5lib_host = @WWW_HOST@
+
 corp_action_redirect = @CORP_REDIRECT@
 
 ; Query cache parameters
