--- a/configurations/dc_config.template.ini
+++ b/configurations/dc_config.template.ini
@@ -21,4 +21,6 @@ FILE_SYNC_ENTRY_SUB_TYPE_LIVE_PRIMARY = 1:10
 FILE_SYNC_ENTRY_SUB_TYPE_LIVE_SECONDARY = 1:11 
 BATCHJOB = 3
 FILE_SYNC_ASSET_SUB_TYPE_CONVERT_LOG = 4:2
+FILE_SYNC_ASSET_SUB_TYPE_LIVE_PRIMARY = 4:5
+FILE_SYNC_ASSET_SUB_TYPE_LIVE_SECONDARY = 4:6
 ENTRY_DISTRIBUTION = contentDistribution.EntryDistribution
