added strict errors mapping

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -383,3 +383,10 @@ kStorageExporter = 3
 [features]
 entryRedirect = true
 
+[api_strict_error_map]
+login.service = user
+login.action = loginByLoginId
+login.default = KalturaErrors::USER_WRONG_PASSWORD
+login.whitelisted[] = KalturaErrors::USER_WRONG_PASSWORD
+login.whitelisted[] = KalturaErrors::PASSWORD_EXPIRED
+
