changed error map implementation after code review

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -384,9 +384,10 @@ kStorageExporter = 3
 entryRedirect = true
 
 [api_strict_error_map]
-login.service = user
-login.action = loginByLoginId
-login.default = KalturaErrors::USER_WRONG_PASSWORD
-login.whitelisted[] = KalturaErrors::USER_WRONG_PASSWORD
-login.whitelisted[] = KalturaErrors::PASSWORD_EXPIRED
-
+; {lowercase-service-name}_{lowercase-action-name}.defaultError = ERROR_CLASS::ERROR_CONSTANT
+; {lowercase-service-name}_{lowercase-action-name}.defaultNull = true ; to always return null
+; {lowercase-service-name}_{lowercase-action-name}.whitelisted[] = WHITELISTED_ERROR_CODE
+user_loginbyloginid.defaultError = KalturaErrors::USER_WRONG_PASSWORD
+user_loginbyloginid.whitelisted[] = USER_WRONG_PASSWORD
+user_loginbyloginid.whitelisted[] = PASSWORD_EXPIRED
+user_resetpassword.defaultNull = true
