Added web and mobile to live params PLAT-1624 #time 30m

--- a/deployment/base/scripts/init_data/04.liveParams.ini
+++ b/deployment/base/scripts/init_data/04.liveParams.ini
@@ -5,7 +5,7 @@ version=0
 partnerId=0
 name="Source"
 systemName="Source"
-tags=source,ingest
+tags="source,ingest,web,mobile"
 description="Maintains the original format and settings of the input stream"
 readyBehavior=0
 isDefault=1
@@ -36,7 +36,7 @@ version=0
 partnerId=0
 name="Basic/Small - WEB/MBL (H264/400)"
 systemName="Basic_Small_400"
-tags="mbr,ipadnew,iphonenew"
+tags="mbr,ipadnew,iphonenew,web,mobile"
 description="Basic/Small - WEB/MBL (H264/400)"
 readyBehavior=2
 isDefault=1
@@ -72,7 +72,7 @@ version=0
 partnerId=0
 name="Basic/Small - WEB/MBL (H264/600)"
 systemName="Basic_Small_600"
-tags="mbr,ipadnew,iphonenew"
+tags="mbr,ipadnew,iphonenew,web,mobile"
 description="Basic/Small - WEB/MBL (H264/600)"
 readyBehavior=2
 isDefault=1
@@ -108,7 +108,7 @@ version=0
 partnerId=0
 name="SD/Small - WEB/MBL (H264/900)"
 systemName="SD_Small_900"
-tags="mbr,ipadnew"
+tags="mbr,ipadnew,web,mobile"
 description="SD/Small - WEB/MBL (H264)"
 readyBehavior=2
 isDefault=1
@@ -143,7 +143,7 @@ version=0
 partnerId=0
 name="Ingest 2"
 systemName="Ingest_2"
-tags=mbr,ingest
+tags="mbr,ingest,web,mobile"
 description="Maintains the original format and settings of the input stream"
 readyBehavior=0
 isDefault=1
@@ -172,7 +172,7 @@ version=0
 partnerId=0
 name="Ingest 3"
 systemName="Ingest_3"
-tags=mbr,ingest
+tags="mbr,ingest,web,mobile"
 description="Maintains the original format and settings of the input stream"
 readyBehavior=0
 isDefault=1
