Added PHP service support for interaction with the Live analytics web service.

--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -129,6 +129,8 @@ remote_addr_header_server = @WWW_HOST@
 ;if not set all the old versions will be kept
 num_of_old_file_sync_versions_to_keep = 2
 
+live_analytics_web_service_url = @LIVE_ANALYTICS_WS@
+
 [password_reset_links]
 default = @SERVICE_URL@/index.php/kmc/kmc/setpasshashkey/
 admin_console = @SERVICE_URL@/admin_console/index.php/user/reset-password-link/token/
