Fix issues: Partner 99 cannot log into KMC account from admin console; Listen statements missing from virtual hosts rendering non-default port ineffective

--- a/configurations/apache/kaltura.conf.template
+++ b/configurations/apache/kaltura.conf.template
@@ -1,3 +1,4 @@
+Listen @KALTURA_VIRTUAL_HOST_PORT@
 <VirtualHost *:@KALTURA_VIRTUAL_HOST_PORT@>
 	ErrorLog "@LOG_DIR@/kaltura_apache_errors.log"
 	CustomLog @LOG_DIR@/kaltura_apache_access.log vhost_kalt
