Fixed required permissions The property should have permissions for both insert && update

--- a/deployment/permissions/object.KalturaEventNotificationTemplate.ini
+++ b/deployment/permissions/object.KalturaEventNotificationTemplate.ini
@@ -8,6 +8,15 @@ permissionItem2.param5 =
 permissionItem2.tags = 
 permissionItem2.permissions = eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_MODIFY, PARTNER_-2_GROUP_*_PERMISSION
 
+permissionItem3.object = KalturaEventNotificationTemplate
+permissionItem3.parameter = automaticDispatchEnabled
+permissionItem3.action = insert
+permissionItem3.partnerId = -2
+permissionItem3.param4 = 
+permissionItem3.param5 = 
+permissionItem3.tags = 
+permissionItem3.permissions = eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_MODIFY, PARTNER_-2_GROUP_*_PERMISSION
+
 permissionItem4.object = KalturaEventNotificationTemplate
 permissionItem4.parameter = manualDispatchEnabled
 permissionItem4.action = update
