add new user role for playback only
PLAT-1565 #time 5h

--- a/deployment/permissions/service.livechannel.ini
+++ b/deployment/permissions/service.livechannel.ini
@@ -27,7 +27,7 @@ permissionItem6.permissions = LIVE_CHANNEL_UPDATE, -5>PARTNER_-5_GROUP_*_PERMISS
 permissionItem7.service = liveChannel
 permissionItem7.action = islive
 permissionItem7.partnerId = 0
-permissionItem7.permissions = ALWAYS_ALLOWED_ACTIONS
+permissionItem7.permissions = ALWAYS_ALLOWED_ACTIONS, PLAYBACK_BASE_PERMISSION
 
 permissionItem9.service = liveChannel
 permissionItem9.action = registerMediaServer
