--- a/deployment/permissions/service.metadata.metadata.ini
+++ b/deployment/permissions/service.metadata.metadata.ini
@@ -60,7 +60,7 @@ permissionItem7.param3 =
 permissionItem7.param4 = 
 permissionItem7.param5 = 
 permissionItem7.tags = 
-permissionItem7.permissions = CONTENT_MANAGE_CUSTOM_DATA, CONTENT_MANAGE_BASE, KMC_READ_ONLY, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem7.permissions = CONTENT_MANAGE_CUSTOM_DATA, CONTENT_MANAGE_BASE, KMC_READ_ONLY, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem8.service = metadata_metadata
 permissionItem8.action = update
