--- a/deployment/permissions/service.playlist.ini
+++ b/deployment/permissions/service.playlist.ini
@@ -33,7 +33,7 @@ permissionItem4.param3 =
 permissionItem4.param4 = 
 permissionItem4.param5 = 
 permissionItem4.tags = 
-permissionItem4.permissions = PLAYLIST_BASE, ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION
+permissionItem4.permissions = PLAYLIST_BASE, ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem5.service = playlist
 permissionItem5.action = executefromcontent
@@ -60,7 +60,7 @@ permissionItem7.param3 =
 permissionItem7.param4 = 
 permissionItem7.param5 = 
 permissionItem7.tags = 
-permissionItem7.permissions = PLAYLIST_BASE, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem7.permissions = PLAYLIST_BASE, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem8.service = playlist
 permissionItem8.action = getstatsfromcontent
