--- a/deployment/permissions/service.session.ini
+++ b/deployment/permissions/service.session.ini
@@ -51,5 +51,5 @@ permissionItem6.param3 =
 permissionItem6.param4 = 
 permissionItem6.param5 = 
 permissionItem6.tags = 
-permissionItem6.permissions = ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem6.permissions = ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
