--- a/deployment/permissions/service.thumbasset.ini
+++ b/deployment/permissions/service.thumbasset.ini
@@ -96,7 +96,7 @@ permissionItem11.param3 =
 permissionItem11.param4 = 
 permissionItem11.param5 = 
 permissionItem11.tags = 
-permissionItem11.permissions = CONTENT_INGEST_UPLOAD, CONTENT_MANAGE_BASE, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem11.permissions = CONTENT_INGEST_UPLOAD, CONTENT_MANAGE_BASE, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem12.service = thumbasset
 permissionItem12.action = list
