--- a/deployment/permissions/service.widget.ini
+++ b/deployment/permissions/service.widget.ini
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = WIDGET_ADMIN, ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem3.permissions = WIDGET_ADMIN, ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem4.service = widget
 permissionItem4.action = list
