--- a/deployment/permissions/service.flavorasset.ini
+++ b/deployment/permissions/service.flavorasset.ini
@@ -51,7 +51,7 @@ permissionItem6.param3 =
 permissionItem6.param4 = 
 permissionItem6.param5 = 
 permissionItem6.tags = 
-permissionItem6.permissions = CONTENT_MANAGE_BASE, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, KMC_READ_ONLY, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem6.permissions = CONTENT_MANAGE_BASE, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, KMC_READ_ONLY, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem7.service = flavorasset
 permissionItem7.action = getdownloadurl
@@ -105,7 +105,7 @@ permissionItem12.param3 =
 permissionItem12.param4 = 
 permissionItem12.param5 = 
 permissionItem12.tags = 
-permissionItem12.permissions = CONTENT_MANAGE_BASE, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION
+permissionItem12.permissions = CONTENT_MANAGE_BASE, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, -2>PARTNER_-2_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, -5>PARTNER_-5_GROUP_*_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem13.service = flavorasset
 permissionItem13.action = reconvert
