--- a/deployment/permissions/service.livestream.ini
+++ b/deployment/permissions/service.livestream.ini
@@ -33,7 +33,7 @@ permissionItem4.param3 =
 permissionItem4.param4 = 
 permissionItem4.param5 = 
 permissionItem4.tags = 
-permissionItem4.permissions = ALWAYS_ALLOWED_ACTIONS
+permissionItem4.permissions = ALWAYS_ALLOWED_ACTIONS, PLAYBACK_BASE_PERMISSION
 
 permissionItem5.service = livestream
 permissionItem5.action = list
