play-server related cahnges: 1. Updated generator.ini to incluse new services required for play-server. 2. Add sql script to add partner -6 (play server). 3. Add script to ingest partner -6 permissions.

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -152,4 +152,4 @@ copyPath = tests/lib
 exclude = media.addfrombulk
 
 [nodePlayServer : node]
-include = cuePoint_cuePoint.list, cuePoint_cuePoint.add, liveStream.get, liveStream.createPeriodicSyncPoints, session.start
+include = cuePoint_cuePoint.list, cuePoint_cuePoint.add, liveStream.get, liveStream.createPeriodicSyncPoints, session.start, uiconf.get, baseEntry.get, metadata_metadata.list
