updating main user role file

--- a/deployment/base/scripts/init_data/03.UserRole.ini
+++ b/deployment/base/scripts/init_data/03.UserRole.ini
@@ -66,3 +66,13 @@ description="Allowed view actions for widget session"
 partnerId=0
 status=1
 permissionNames="WIDGET_SESSION_PERMISSION"
+
+[PLAYBACK_BASE_ROLE]
+id=14
+strId=PLAYBACK_BASE_ROLE
+name="PLAYBACK BASE ROLE"
+systemName="PLAYBACK_BASE_ROLE"
+description="Only playback"
+partnerId=0
+status=1
+permissionNames="PLAYBACK_BASE_PERMISSION"
