add permission playback object

--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1258,3 +1258,9 @@ permission194.description = "Media Server partner-level permission"
 permission194.dependsOnPermissionNames = FEATURE_HYBRID_ECDN
 permission194.tags = 
 permission194.partnerGroup =
+
+permission195.partnerId = 0
+permission195.type = 1
+permission195.name = PLAYBACK_BASE_PERMISSION
+permission195.friendlyName = "Playback base"
+permission195.description = "Playback base permissions"
