Play server permission related collective merge: 1. Added play server impersonate permission to play server used services 2. Update play server live script to include required permission script update execution. 3. Updated generate.ini with play server additional required service generation.

--- a/deployment/permissions/service.permission.ini
+++ b/deployment/permissions/service.permission.ini
@@ -42,7 +42,7 @@ permissionItem5.param3 =
 permissionItem5.param4 = 
 permissionItem5.param5 = 
 permissionItem5.tags = 
-permissionItem5.permissions = -2>SYSTEM_ADMIN_PERMISSIONS_MANAGE, ADMIN_BASE, KMC_READ_ONLY, -2>PARTNER_-2_GROUP_*_PERMISSION
+permissionItem5.permissions = -2>SYSTEM_ADMIN_PERMISSIONS_MANAGE, ADMIN_BASE, KMC_READ_ONLY, -2>PARTNER_-2_GROUP_*_PERMISSION, -6>PARTNER_-6_GROUP_*_PERMISSION
 
 permissionItem6.service = permission
 permissionItem6.action = update
