--- a/deployment/base/scripts/init_data/01.Partner.template.ini
+++ b/deployment/base/scripts/init_data/01.Partner.template.ini
@@ -3,7 +3,7 @@
 id=0
 partnerName=Global
 adminSecret=@PARTNER_ZERO_ADMIN_SECRET@
-adminSecret=@PARTNER_ZERO_SECRET@
+secret=@PARTNER_ZERO_SECRET@
 appearInSearch=2
 description="Global Content Configurations"
 commercialUse=0
@@ -13,7 +13,7 @@ status=1
 id=-1
 partnerName=Batch
 adminSecret=@BATCH_PARTNER_ADMIN_SECRET@
-adminSecret=@BATCH_PARTNER_SECRET@
+secret=@BATCH_PARTNER_SECRET@
 description="Async Batch"
 status=1
 
@@ -21,7 +21,7 @@ status=1
 id=-2
 partnerName="Admin Console"
 adminSecret=@ADMIN_CONSOLE_PARTNER_ADMIN_SECRET@
-adminSecret=@ADMIN_CONSOLE_PARTNER_SECRET@
+secret=@ADMIN_CONSOLE_PARTNER_SECRET@
 description="Administration Console"
 status=1
 
@@ -29,7 +29,7 @@ status=1
 id=-3
 partnerName="Hosted Pages"
 adminSecret=@HOSTED_PAGES_PARTNER_ADMIN_SECRET@
-adminSecret=@HOSTED_PAGES_PARTNER_SECRET@
+secret=@HOSTED_PAGES_PARTNER_SECRET@
 description="Hosted Pages"
 status=1
 
@@ -54,7 +54,7 @@ id=-5
 prefix=-5
 partnerName="Media"
 adminSecret=@MEDIA_PARTNER_ADMIN_SECRET@
-adminSecret=@MEDIA_PARTNER_ECRET@
+secret=@MEDIA_PARTNER_ECRET@
 description="Media Server"
 status=1
 
@@ -63,7 +63,7 @@ id=-6
 prefix=-6
 partnerName="Play-Server"
 adminSecret=@PLAY_PARTNER_ADMIN_SECRET@
-adminSecret=@PLAY_PARTNER_SECRET@
+secret=@PLAY_PARTNER_SECRET@
 description="Play Server"
 status=1
 
@@ -71,7 +71,7 @@ status=1
 id=99
 partnerName="Template KMC account"
 adminSecret=@TEMPLATE_PARTNER_ADMIN_SECRET@
-adminSecret=@TEMPLATE_PARTNER_SECRET@
+secret=@TEMPLATE_PARTNER_SECRET@
 appearInSearch=1
 description="Template KMC account is used to load the default content, players & playlists for a new partner"
 commercialUse=1
