--- a/deployment/base/scripts/init_data/01.Partner.template.ini
+++ b/deployment/base/scripts/init_data/01.Partner.template.ini
@@ -54,7 +54,7 @@ id=-5
 prefix=-5
 partnerName="Media"
 adminSecret=@MEDIA_PARTNER_ADMIN_SECRET@
-secret=@MEDIA_PARTNER_ECRET@
+secret=@MEDIA_PARTNER_SECRET@
 description="Media Server"
 status=1
 
