--- a/deployment/permissions/service.livereports.ini
+++ b/deployment/permissions/service.livereports.ini
@@ -7,3 +7,12 @@ permissionItem1.param4 =
 permissionItem1.param5 = 
 permissionItem1.tags = 
 permissionItem1.permissions = BASE_USER_SESSION_PERMISSION
+
+permissionItem2.service = livereports
+permissionItem2.action = getEvents
+permissionItem2.partnerId = 0
+permissionItem2.param3 = 
+permissionItem2.param4 = 
+permissionItem2.param5 = 
+permissionItem2.tags = 
+permissionItem2.permissions = BASE_USER_SESSION_PERMISSION
