--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -113,6 +113,7 @@ metadata_sphinx_num_of_int_fields = 10
 ;the range is used when checking service actions permissions and allowing to access certain 
 ;services without KS from the internal servers
 ;internal_ip_range = @IP_RANGE@
+;accept_private_ips = 1
 
 ; dwh settings
 plays_limit = 100000
