Replace use of ids with different unique identifiers where possible

--- a/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiAppleHttp.template.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiAppleHttp.template.ini
@@ -2,7 +2,9 @@
 partnerId=0
 name="Default HTTP Delivery Profile"
 type=10
-systemName="Default Akamai HLS direct"
+systemName="Default_Akamai_HLS_direct"
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 description="Default Akamai HLS direct"
 streamerType=applehttp
 isDefault=1
