--- a/deployment/base/scripts/init_data/07.DeliveryProfileLiveHds.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileLiveHds.ini
@@ -3,7 +3,9 @@
 partnerId=0
 name="Default HD Network Live Delivery Profile"
 type=1002
-systemName="Default HD Network Live Delivery Profile"
+systemName="Default_HD_Network_Live_Delivery_Profile"
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 description="Default HD Network Live Delivery Profile"
 streamerType=hdnetworkmanifest
 isDefault=1
@@ -14,7 +16,9 @@ status=0
 partnerId=0
 name="Default HDS Live Delivery Profile"
 type=1002
-systemName="Default HDS Live Delivery Profile"
+systemName="Default_HDS_Live_Delivery_Profile"
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 description="Default HDS Live Delivery Profile"
 streamerType=hds
 isDefault=1
