--- a/deployment/base/scripts/init_data/07.DeliveryProfileLiveRtmp.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileLiveRtmp.ini
@@ -2,7 +2,9 @@
 partnerId=0
 name="Default RTMP Live Delivery Profile"
 type=1005
-systemName="Default RTMP Live Delivery Profile"
+systemName="Default_RTMP_Live_Delivery_Profile"
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 description="Default RTMP Live Delivery Profile"
 streamerType=rtmp
 isDefault=1
