--- a/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiHttp.template.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiHttp.template.ini
@@ -3,6 +3,8 @@ partnerId=0
 name="Default HTTP Delivery Profile"
 type=14
 systemName="Default HTTP Delivery Profile"
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 description="Default HTTP Delivery Profile"
 streamerType=http
 isDefault=1
