--- a/deployment/base/scripts/init_data/07.DeliveryProfileLiveAppleHttp.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileLiveAppleHttp.ini
@@ -3,7 +3,9 @@
 partnerId=0
 name="Default HLS Live Delivery Profile"
 type=1001
-systemName="Default HLS Live Delivery Profile"
+systemName="Default_HLS_Live_Delivery_Profile"
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 description="Default HLS Live Delivery Profile"
 streamerType=applehttp
 isDefault=1
