Added delivery profile ui permissinos

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -772,6 +772,7 @@ access.partner.manage-template-partners = SYSTEM_ADMIN_MANAGE_TEMPLATE_PARTNERS
 ;access.partner.config-virus-scan = SYSTEM_ADMIN_VIRUS_SCAN
 ;access.partner.config-email-ingestion = SYSTEM_ADMIN_EMAIL_INGESTION
 access.partner-usage.all = SYSTEM_ADMIN_PUBLISHER_USAGE
+access.delivery.all = SYSTEM_ADMIN_PUBLISHER_USAGE
 
 access.user.all = ADMIN_BASE,SYSTEM_ADMIN_USER_MANAGE
 access.user.block = ADMIN_USER_UPDATE
