add widevine permission to base playback user role

--- a/deployment/permissions/service.widevine.widevinedrm.ini
+++ b/deployment/permissions/service.widevine.widevinedrm.ini
@@ -6,4 +6,4 @@ permissionItem1.param3 =
 permissionItem1.param4 = 
 permissionItem1.param5 = 
 permissionItem1.tags = 
-permissionItem1.permissions = widevine.WIDEVINE_BASE, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem1.permissions = widevine.WIDEVINE_BASE, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
