Added permission to disable remember me option on KMC. Permission name : FEATURE_DISABLE_REMEMBER_ME.

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -732,6 +732,14 @@ moduls.webexDropFolder.basePermissionType =
 moduls.webexDropFolder.basePermissionName = DROPFOLDER_PLUGIN_PERMISSION
 moduls.webexDropFolder.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.disableRememberMe.enabled = true
+moduls.disableRememberMe.permissionType = 2
+moduls.disableRememberMe.label = Disable KMC remember me option
+moduls.disableRememberMe.permissionName = FEATURE_DISABLE_REMEMBER_ME
+moduls.disableRememberMe.basePermissionType = 2
+moduls.disableRememberMe.basePermissionType =
+moduls.disableRememberMe.basePermissionName =
+moduls.disableRememberMe.group = GROUP_ENABLE_DISABLE_FEATURES
 
 ; ACCESS PERMISSIONS
 
