Allow the option to disable KMC "forgot password" functionality per partner. #PLAT-1649 #time 2h

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -732,6 +732,14 @@ moduls.webexDropFolder.basePermissionType =
 moduls.webexDropFolder.basePermissionName = DROPFOLDER_PLUGIN_PERMISSION
 moduls.webexDropFolder.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.disableResetPassword.enabled = true
+moduls.disableResetPassword.permissionType = 2
+moduls.disableResetPassword.label = Disable reset password email
+moduls.disableResetPassword.permissionName = FEATURE_DISABLE_RESET_PASSWORD_EMAIL
+moduls.disableResetPassword.basePermissionType = 2
+moduls.disableResetPassword.basePermissionType =
+moduls.disableResetPassword.basePermissionName =
+moduls.disableResetPassword.group = GROUP_SECURITY_OPTIONS
 
 ; ACCESS PERMISSIONS
 
