Missing permission for action categoryUser->copyFromCategory

--- a/deployment/permissions/service.categoryuser.ini
+++ b/deployment/permissions/service.categoryuser.ini
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = 
+permissionItem3.permissions = CONTENT_MANAGE_CATEGORY_USERS
 
 permissionItem4.service = categoryuser
 permissionItem4.action = deactivate
