Remove usage of ids during user role creation

--- a/deployment/base/scripts/init_data/03.UserRole.ini
+++ b/deployment/base/scripts/init_data/03.UserRole.ini
@@ -1,6 +1,5 @@
 
 [BASE_USER_SESSION_ROLE]
-id=1
 strId=BASE_USER_SESSION_ROLE
 name="Basic User Session Role"
 systemName="Basic User Session Role"
@@ -8,10 +7,11 @@ description="Allowed actions for a basic user with no special permissions"
 partnerId=0
 status=1
 permissionNames="BASE_USER_SESSION_PERMISSION"
+identifierParam="strId"
+identifierColumn="STR_ID"
 
 
 [PARTNER_ADMIN_ROLE]
-id=2
 strId=PARTNER_ADMIN_ROLE
 name="Publisher Administrator"
 systemName="Publisher Administrator"
@@ -20,10 +20,11 @@ partnerId=0
 status=1
 permissionNames="*"
 tags="kmc,partner_admin"
+identifierParam="strId"
+identifierColumn="STR_ID"
 
 
 [NO_SESSION_ROLE]
-id=3
 strId=NO_SESSION_ROLE
 name="No Session"
 systemName="No Session"
@@ -31,10 +32,11 @@ description="Only always allowed actions"
 partnerId=0
 status=1
 permissionNames="ALWAYS_ALLOWED_ACTIONS,ALWAYS_ALLOWED_PERMISSION_HYBRID_ECDN"
+identifierParam="strId"
+identifierColumn="STR_ID"
 
 
 [BULK_LOG_VIEWER]
-id=11
 strId=BULK_LOG_VIEWER
 name="Bulk Log Viewer Role"
 systemName="BULK_LOG_VIEWER"
@@ -42,11 +44,12 @@ description="Bulk Log Viewer Role"
 partnerId=0
 status=1
 permissionNames="BULK_LOG_DOWNLOAD_EMAIL"
+identifierParam="strId"
+identifierColumn="STR_ID"
 
 
 
 [REPORT_VIEWER_ROLE]
-id=12
 strId=REPORT_VIEWER_ROLE
 name="Report Viewer Role"
 systemName="REPORT_VIEWER_ROLE"
@@ -54,11 +57,11 @@ description="Report Viewer Role"
 partnerId=0
 status=1
 permissionNames="ANALYTICS_BASE"
-
+identifierParam="strId"
+identifierColumn="STR_ID"
 
 
 [WIDGET_SESSION_ROLE]
-id=13
 strId=WIDGET_SESSION_ROLE
 name="Widget Session Role"
 systemName="WIDGET_SESSION_ROLE"
@@ -66,9 +69,10 @@ description="Allowed view actions for widget session"
 partnerId=0
 status=1
 permissionNames="WIDGET_SESSION_PERMISSION"
+identifierParam="strId"
+identifierColumn="STR_ID"
 
 [PLAYBACK_BASE_ROLE]
-id=14
 strId=PLAYBACK_BASE_ROLE
 name="PLAYBACK BASE ROLE"
 systemName="PLAYBACK_BASE_ROLE"
@@ -76,3 +80,5 @@ description="Only playback"
 partnerId=0
 status=1
 permissionNames="PLAYBACK_BASE_PERMISSION"
+identifierParam="strId"
+identifierColumn="STR_ID"
