Add get version action for system service

--- a/deployment/permissions/service.system.ini
+++ b/deployment/permissions/service.system.ini
@@ -26,3 +26,12 @@ permissionItem3.param5 =
 permissionItem3.tags = 
 permissionItem3.permissions = ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
 
+permissionItem1.service = system
+permissionItem1.action = getVersion
+permissionItem1.partnerId = 0
+permissionItem1.param3 = 
+permissionItem1.param4 = 
+permissionItem1.param5 = 
+permissionItem1.tags = 
+permissionItem1.permissions = ALWAYS_ALLOWED_ACTIONS
+
