--- a/deployment/permissions/partner.-2.ini
+++ b/deployment/permissions/partner.-2.ini
@@ -489,3 +489,12 @@ permission188.description = "Permission to access secured play ready configurati
 permission188.dependsOnPermissionNames = 
 permission188.tags = 
 permission188.partnerGroup = 
+
+permission189.partnerId = -2
+permission189.type = 1
+permission189.name = SYSTEM_ADMIN_DELIVERY
+permission189.friendlyName = "Delivery"
+permission189.description = "Delivery profile UI permission"
+permission189.dependsOnPermissionNames = 
+permission189.tags = 
+permission189.partnerGroup = 
