--- a/deployment/permissions/service.deliveryprofile.ini
+++ b/deployment/permissions/service.deliveryprofile.ini
@@ -6,7 +6,7 @@ permissionItem1.param3 =
 permissionItem1.param4 = 
 permissionItem1.param5 = 
 permissionItem1.tags = 
-permissionItem1.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION
+permissionItem1.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY
 
 permissionItem2.service = deliveryprofile
 permissionItem2.action = update
@@ -15,7 +15,7 @@ permissionItem2.param3 =
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION
+permissionItem2.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY
 
 permissionItem3.service = deliveryprofile
 permissionItem3.action = list
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION
+permissionItem3.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY
 
 permissionItem4.service = deliveryprofile
 permissionItem4.action = get
@@ -33,7 +33,7 @@ permissionItem4.param3 =
 permissionItem4.param4 = 
 permissionItem4.param5 = 
 permissionItem4.tags = 
-permissionItem4.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION
+permissionItem4.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY
 
 permissionItem5.service = deliveryprofile
 permissionItem5.action = clone
@@ -42,4 +42,4 @@ permissionItem5.param3 =
 permissionItem5.param4 = 
 permissionItem5.param5 = 
 permissionItem5.tags = 
-permissionItem5.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION
+permissionItem5.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY
