Add uniquness by system name to the flavorParamsConversionProfile objects

--- a/deployment/base/scripts/init_data/08.flavorParamsConversionProfile.ini
+++ b/deployment/base/scripts/init_data/08.flavorParamsConversionProfile.ini
@@ -3,45 +3,57 @@ conversionProfileId=1
 flavorParamsId=32
 systemName=Source
 origin=1
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 [LivePassthruIngest_2]
 conversionProfileId=1
 flavorParamsId=36
 systemName=Ingest_2
 origin=1
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 [LivePassthruIngest_3]
 conversionProfileId=1
 flavorParamsId=37
 systemName=Ingest_3
 origin=1
-
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 
 [CloudTranscodeSource]
 conversionProfileId=2
 flavorParamsId=32
-systemName=Source
+systemName=Source_Cloud
 origin=1
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 [CloudTranscodeBasic_Small_400]
 conversionProfileId=2
 flavorParamsId=33
 systemName=Basic_Small_400
 origin=1
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 [CloudTranscodeBasic_Small_600]
 conversionProfileId=2
 flavorParamsId=34
 systemName=Basic_Small_600
 origin=1
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 [CloudTranscodeSD_Small_900]
 conversionProfileId=2
 flavorParamsId=35
 systemName=SD_Small_900
 origin=1
-
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
 
 
 [MulticastSource]
@@ -49,10 +61,14 @@ conversionProfileId=3
 flavorParamsId=32
 systemName=Source
 origin=1
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
+
 
 [MulticastMulticastTranscode]
 conversionProfileId=3
 flavorParamsId=38
 systemName="Multicast transcode"
 origin=0
-
+identifierParam="systemName"
+identifierColumn="SYSTEM_NAME"
