Report sercing action addition #PLAT-1548 #time 5h

--- a/deployment/permissions/service.report.ini
+++ b/deployment/permissions/service.report.ini
@@ -71,3 +71,12 @@ permissionItem8.param5 =
 permissionItem8.tags = 
 permissionItem8.permissions = ANALYTICS_BASE
 
+permissionItem9.service = report
+permissionItem9.action = serve
+permissionItem9.partnerId = 0
+permissionItem9.param3 = 
+permissionItem9.param4 = 
+permissionItem9.param5 = 
+permissionItem9.tags = 
+permissionItem9.permissions = ANALYTICS_BASE, CONTENT_MANAGE_BASE, ALWAYS_ALLOWED_ACTIONS, BASE_USER_SESSION_PERMISSION
+
