--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -741,6 +741,15 @@ moduls.disableResetPassword.basePermissionType =
 moduls.disableResetPassword.basePermissionName =
 moduls.disableResetPassword.group = GROUP_SECURITY_OPTIONS
 
+moduls.disableRememberMe.enabled = true
+moduls.disableRememberMe.permissionType = 2
+moduls.disableRememberMe.label = Disable KMC remember me option
+moduls.disableRememberMe.permissionName = FEATURE_DISABLE_REMEMBER_ME
+moduls.disableRememberMe.basePermissionType = 2
+moduls.disableRememberMe.basePermissionType =
+moduls.disableRememberMe.basePermissionName =
+moduls.disableRememberMe.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
