Add dynamism to default object creation

--- a/deployment/base/scripts/init_data/08.flavorParamsConversionProfile.ini
+++ b/deployment/base/scripts/init_data/08.flavorParamsConversionProfile.ini
@@ -1,5 +1,5 @@
 [LivePassthruSource]
-conversionProfileId=1
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Passthrough_Live', 2)->getId())"
 flavorParamsId=32
 systemName=Source
 origin=1
@@ -7,7 +7,7 @@ identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
 
 [LivePassthruIngest_2]
-conversionProfileId=1
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Passthrough_Live', 2)->getId())"
 flavorParamsId=36
 systemName=Ingest_2
 origin=1
@@ -15,7 +15,7 @@ identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
 
 [LivePassthruIngest_3]
-conversionProfileId=1
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Passthrough_Live', 2)->getId())"
 flavorParamsId=37
 systemName=Ingest_3
 origin=1
@@ -24,7 +24,7 @@ identifierColumn="SYSTEM_NAME"
 
 
 [CloudTranscodeSource]
-conversionProfileId=2
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Default_Live', 2)->getId())"
 flavorParamsId=32
 systemName=Source_Cloud
 origin=1
@@ -32,7 +32,7 @@ identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
 
 [CloudTranscodeBasic_Small_400]
-conversionProfileId=2
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Default_Live', 2)->getId())"
 flavorParamsId=33
 systemName=Basic_Small_400
 origin=1
@@ -40,7 +40,7 @@ identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
 
 [CloudTranscodeBasic_Small_600]
-conversionProfileId=2
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Default_Live', 2)->getId())"
 flavorParamsId=34
 systemName=Basic_Small_600
 origin=1
@@ -48,7 +48,7 @@ identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
 
 [CloudTranscodeSD_Small_900]
-conversionProfileId=2
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Default_Live', 2)->getId())"
 flavorParamsId=35
 systemName=SD_Small_900
 origin=1
@@ -57,16 +57,16 @@ identifierColumn="SYSTEM_NAME"
 
 
 [MulticastSource]
-conversionProfileId=3
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Multicast_Default', 2)->getId())"
 flavorParamsId=32
-systemName=Source
+systemName=Source_Multicast
 origin=1
 identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
 
 
 [MulticastMulticastTranscode]
-conversionProfileId=3
+conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Multicast_Default', 2)->getId())"
 flavorParamsId=38
 systemName="Multicast transcode"
 origin=0
