systemName not unique in case of upgrades

--- a/deployment/base/scripts/init_data/08.flavorParamsConversionProfile.ini
+++ b/deployment/base/scripts/init_data/08.flavorParamsConversionProfile.ini
@@ -1,7 +1,7 @@
 [LivePassthruSource]
 conversionProfileId="eval(conversionProfile2Peer::retrieveByPartnerIdAndSystemName(99, 'Passthrough_Live', 2)->getId())"
 flavorParamsId=32
-systemName=Source
+systemName=Source_Passthrough
 origin=1
 identifierParam="systemName"
 identifierColumn="SYSTEM_NAME"
