--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -750,6 +750,15 @@ moduls.disableRememberMe.basePermissionType =
 moduls.disableRememberMe.basePermissionName =
 moduls.disableRememberMe.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.realTimeReports.enabled = true
+moduls.realTimeReports.permissionType = 2
+moduls.realTimeReports.label = Enable Real-time reports
+moduls.realTimeReports.permissionName = FEATURE_REAL_TIME_REPORTS
+moduls.realTimeReports.basePermissionType = 2
+moduls.realTimeReports.basePermissionType =
+moduls.realTimeReports.basePermissionName =
+moduls.realTimeReports.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
