--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -21,6 +21,8 @@ stats_host_https = @WWW_HOST@
 
 kaltura_installation_type = @KALTURA_VERSION_TYPE@
 
+default_live_recording_timeout = 86400
+
 corp_action_redirect = @CORP_REDIRECT@
 
 ; Query cache parameters
