live recording timeout removed from local.ini, moved to base.ini

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -39,6 +39,8 @@ ignore_cdl_failure = false
 			
 priority_time_range = 600
 
+default_live_recording_timeout = 86400
+
 ; enableLanguageMenu = true  system flip - currently disabled
 
 ; the max allowed time that will be used to calculate dates that are relative to current time
