adding redundants array

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -272,6 +272,9 @@ audio_file_ext[]=vob
 audio_file_ext[]=amr
 audio_file_ext[]=m4a
 
+;chats to be excluded from ulr when verified
+redundant_url_chars[]="_"
+
 hls_live_stream_content_type[]=application/vnd.apple.mpegurl 
 hls_live_stream_content_type[]=application/x-mpegURL
 hls_live_stream_content_type[]=audio/x-mpegURL
