--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -272,7 +272,7 @@ audio_file_ext[]=vob
 audio_file_ext[]=amr
 audio_file_ext[]=m4a
 
-;chats to be excluded from ulr when verified
+;chars to be excluded from url when verified
 redundant_url_chars[]="_"
 
 hls_live_stream_content_type[]=application/vnd.apple.mpegurl 
