--- a/configurations/apache/kaltura.ssl.conf.template
+++ b/configurations/apache/kaltura.ssl.conf.template
@@ -1,3 +1,9 @@
+<IfModule !ssl_module>
+	LoadModule ssl_module modules/mod_ssl.so
+</IfModule>
+
+Listen 443
+
 SSLPassPhraseDialog  builtin
 SSLSessionCache         shmcb:/var/cache/mod_ssl/scache(512000)
 SSLSessionCacheTimeout  300
