ps:CR-179513 add deleteLocalContent action permissions

--- a/deployment/permissions/service.flavorasset.ini
+++ b/deployment/permissions/service.flavorasset.ini
@@ -143,3 +143,12 @@ permissionItem16.param5 =
 permissionItem16.tags = 
 permissionItem16.permissions = CONTENT_MANAGE_RECONVERT, -2>SYSTEM_ADMIN_ENTRY_INVESTIGATION, -2>PARTNER_-2_GROUP_*_PERMISSION
 
+permissionItem17.service = flavorasset
+permissionItem17.action = deletelocalcontent
+permissionItem17.partnerId = 0
+permissionItem17.param3 =
+permissionItem17.param4 =
+permissionItem17.param5 =
+permissionItem17.tags =
+permissionItem17.permissions = CONTENT_MANAGE_DELETE, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
+
