--- a/configurations/apache/kaltura.ssl.conf.template
+++ b/configurations/apache/kaltura.ssl.conf.template
@@ -2,7 +2,7 @@
 	LoadModule ssl_module modules/mod_ssl.so
 </IfModule>
 
-Listen 443
+Listen @KALTURA_VIRTUAL_HOST_PORT@
 
 SSLPassPhraseDialog  builtin
 SSLSessionCache         shmcb:/var/cache/mod_ssl/scache(512000)
