Change 'default_delivery_type' to http.

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -204,7 +204,7 @@ max_live_recording_duration_hours = 24
 short_entries_max_duration = 300
 short_entries_default_delivery_type = http
 secured_default_delivery_type = hds
-default_delivery_type = akamai,hds
+default_delivery_type = http
 
 template_partner_custom_data_exclude_fields[] = defConversionProfileType
 template_partner_custom_data_exclude_fields[] = defaultAccessControlId
