--- a/deployment/permissions/service.attachment.attachmentasset.ini
+++ b/deployment/permissions/service.attachment.attachmentasset.ini
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = CONTENT_INGEST_UPLOAD, CONTENT_MANAGE_BASE, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
+permissionItem3.permissions = CONTENT_INGEST_UPLOAD, CONTENT_MANAGE_BASE, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
 
 permissionItem4.service = attachment_attachmentasset
 permissionItem4.action = getremotepaths
