--- a/deployment/permissions/object.KalturaLiveEntry.ini
+++ b/deployment/permissions/object.KalturaLiveEntry.ini
@@ -34,3 +34,40 @@ permissionItem4.param4 =
 permissionItem4.param5 = 
 permissionItem4.tags = 
 permissionItem4.permissions = PUSH_PUBLISH_PERMISSION
+
+
+permissionItem5.object = KalturaLiveEntry
+permissionItem5.parameter = publishConfigurations
+permissionItem5.action = all
+permissionItem5.partnerId = 0
+permissionItem5.param4 = 
+permissionItem5.param5 = 
+permissionItem5.tags = 
+permissionItem5.permissions = PUSH_PUBLISH_PERMISSION
+
+permissionItem6.object = KalturaLiveEntry
+permissionItem6.parameter = publishConfigurations
+permissionItem6.action = read
+permissionItem6.partnerId = 0
+permissionItem6.param4 = 
+permissionItem6.param5 = 
+permissionItem6.tags = 
+permissionItem6.permissions = PUSH_PUBLISH_PERMISSION
+
+permissionItem7.object = KalturaLiveEntry
+permissionItem7.parameter = publishConfigurations
+permissionItem7.action = insert
+permissionItem7.partnerId = 0
+permissionItem7.param4 = 
+permissionItem7.param5 = 
+permissionItem7.tags = 
+permissionItem7.permissions = PUSH_PUBLISH_PERMISSION
+
+permissionItem8.object = KalturaLiveEntry
+permissionItem8.parameter = publishConfigurations
+permissionItem8.action = update
+permissionItem8.partnerId = 0
+permissionItem8.param4 = 
+permissionItem8.param5 = 
+permissionItem8.tags = 
+permissionItem8.permissions = PUSH_PUBLISH_PERMISSION
