--- a/deployment/permissions/service.session.ini
+++ b/deployment/permissions/service.session.ini
@@ -15,7 +15,7 @@ permissionItem2.param3 =
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = KMC_ACCESS, KMC_READ_ONLY, -3>HOSTED_PAGES_BASE, -3>PARTNER_-3_GROUP_*_PERMISSION
+permissionItem2.permissions = KMC_ACCESS, KMC_READ_ONLY, -3>HOSTED_PAGES_BASE, -3>PARTNER_-3_GROUP_*_PERMISSION, -1>BATCH_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION
 
 permissionItem3.service = session
 permissionItem3.action = impersonate
