Add missing plugin to template ini file

--- a/configurations/plugins.template.ini
+++ b/configurations/plugins.template.ini
@@ -36,6 +36,9 @@ AdCuePointBulkUploadXml
 CodeCuePoint
 CodeCuePointMetadata
 CodeCuePointBulkUploadXml
+; ThumbCuePoint
+; ThumbCuePointMetadata
+; ThumbCuePointBulkUploadXml
 Annotation
 AnnotationMetadata
 AnnotationBulkUploadXml
